# nixos-avf-image-app

./: .gitignore  Cargo.toml  DPA.md  README.md  flake.nix  module.nix  package.nix  settings.gradle.kts  ui-draft.txt
app/: build.gradle.kts
app/src/androidTest/java/io/mkg20001/nixosimage/: ExampleInstrumentedTest.kt  FastlaneScreenshot.kt
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: instructions_debug.md  instructions_generic.md  instructions_magisk.md  instructions_replace.md  post_setup.sh  replace.sh
app/src/main/graphql/: GetReleases.graphql
app/src/main/java/io/mkg20001/nixosimage/: Install.kt  InstallComposable.kt  InstallMagic.kt  MainActivity.kt
app/src/main/java/io/mkg20001/nixosimage/data/: GithHubRelease.kt  ImageDownloader.kt  (+1 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_install.xml  fragment_home.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/io/mkg20001/nixosimage/: ExampleUnitTest.kt
assets/: convert_material_colors.js
fastlane/: Appfile  Fastfile  README.md
fastlane/metadata/android/: screenshots.html
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
old/: HomeFragment.kt  MainActivity.kt  mobile_navigation.xml
old/dashboard/: DashboardViewModel.kt
old/values-night/: themes.xml
src/: main.rs
(+19 files in other folders)
