[package]
name = "nixos-image-proxy-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
graphql_client = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }